--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close__btn" data-modal-close>
-          Закрити
           <svg class="class__icon">
-            <use href="./img/symbol-defs.svg"></use>
+            <use href="./img/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
         <h1 class="modal__title">Reach out to us!</h1>
-        <form>
-          <label for="">
-            <input type="text" />
+        <form class="form">
+          <label class="" for="">
+            name
+            <input placeholder="Your name*" type="text"/>
           </label>
-          <label for="">
-            <input type="text" />
+          <label class="" for="">
+            <input placeholder="Your e-mail*" type="text" />
           </label>
-          <label for="">
-        <textarea name="mesage" id="" cols="30" rows="10"></textarea>
+          <label class="" for="">
+        <textarea placeholder="Your message*" name="mesage" id="" cols="30" rows="10"></textarea>
           </label>
           <button type="submit">Send message</button>
         </form>
