--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
         </button>
         <h1 class="modal__title">Reach out to us!</h1>
         <form class="form">
-          <label class="" for="">
+          <label class="form__label" for="">
             name
             <input placeholder="Your name*" type="text"/>
           </label>
-          <label class="" for="">
+          <label class="form__label" for="">
             <input placeholder="Your e-mail*" type="text" />
           </label>
-          <label class="" for="">
+          <label class="form__label" for="">
         <textarea placeholder="Your message*" name="mesage" id="" cols="30" rows="10"></textarea>
           </label>
-          <button type="submit">Send message</button>
+          <button class="form__button" type="submit">Send message</button>
         </form>
-        <p>....</p>
       </div>
     </div>
 
