--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+12+Charted&family=Lugrasimo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -55,5 +58,422 @@
     </div>
 
     <script src="./modal.js"></script>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+
+  <body>
+    <!-- header -->
+    <header class="header">
+      <div class="container">
+        <a class="header__logo" href="#"
+          >Web<span class="header__logo--color">Studio</span></a
+        >
+        <nav class="header__nav">
+          <ul class="header__nav__list">
+            <li class="header__nav__item">
+              <a class="header__nav__link" href="./index.html">Студія</a>
+            </li>
+            <li class="header__nav__item">
+              <a class="header__nav__link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="header__nav__item">
+              <a class="header__nav__link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header__contacts__list">
+          <li class="header__contacts__item">
+            <a class="header__contacts__link" href="mailto:info@devstudio.com">
+              <svg class="header__contacts__email-icon">
+                <use href="./images/icoons/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="header__contacts__item">
+            <a class="header__contacts__link" href="tel:380961111111">
+              <svg class="header__contacts__phone-icon">
+                <use
+                  href="./images/icoons/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- main -->
+    <main>
+      <section class="hero section">
+        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero__button" type="button">Замовити послугу</button>
+      </section>
+      <!-- advantages -->
+      <section class="advantages section">
+        <div class="container">
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__item__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="advantages__item__text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="advantages__item__text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item__title">ПЛАНУВАННЯ</h3>
+              <p class="advantages__item__text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="advantages__item__text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- works -->
+      <section class="works section">
+        <div class="container">
+          <h2 class="works__title">Чим ми займаємося</h2>
+          <ul class="works__list">
+            <li class="works__item">
+              <img
+                src="images/about/img1.jpg"
+                alt="work with ipad"
+                width="400"
+              />
+            </li>
+            <li class="works__item">
+              <img src="images/about/img2.jpg" alt="noutbook" width="400" />
+            </li>
+            <li class="works__item">
+              <img src="images/about/img3.jpg" alt="ipad" width="400" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- team -->
+      <section class="team">
+        <div class="container">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="team__list">
+            <li class="team__list__item">
+              <img
+                class="team__item__img"
+                src="images/team/igor.jpg"
+                alt="Happy man"
+              />
+              <div class="team__item__thumb">
+                <h4 class="team__item__title">Ігор Дем'яненко</h4>
+                <p class="team__item__text">Product Designer</p>
+                <ul class="team__members-icons-list">
+                  <li class="team__members-item">
+                    <a class="team__members-svg--link" href="#">
+                      <svg class="team__members-svg">
+                        <use
+                          href="./images/icoons/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team__members-item">
+                    <a class="team__members-svg--link" href="#">
+                      <svg class="team__members-svg">
+                        <use
+                          href="./images/icoons/symbol-defs.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team__members-item">
+                    <a class="team__members-svg--link" href="#">
+                      <svg class="team__members-svg">
+                        <use
+                          href="./images/icoons/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team__members-item">
+                    <a class="team__members-svg--link" href="#">
+                      <svg class="team__members-svg">
+                        <use
+                          href="./images/icoons/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team__list__item">
+              <img
+                class="team__item__img"
+                src="images/team/olga.jpg"
+                alt="Happy Woman"
+              />
+              <div class="team__item__thumb">
+
+              <h4 class="team__item__title">Ольга Рєпіна</h4>
+              <p class="team__item__text">Frontend Developer</p>
+              <ul class="team__members-icons-list">
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              </div>
+            </li>
+            <li class="team__list__item">
+              <img
+                class="team__item__img"
+                src="images/team/mykola.jpg"
+                alt="actor"
+              />
+              <div class="team__item__thumb">
+
+              <h4 class="team__item__title">Микола Тарасов</h4>
+              <p class="team__item__text">Marketing</p>
+              <ul class="team__members-icons-list">
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              </div>
+            </li>
+            <li class="team__list__item">
+              <img
+                class="team__item__img"
+                src="images/team/miha.jpg"
+                alt="rich man"
+              />
+              <div class="team__item__thumb">
+
+              <h4 class="team__item__title">Михайло Єрмаков</h4>
+              <p class="team__item__text">UI Designer</p>
+              <ul class="team__members-icons-list">
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team__members-item">
+                  <a class="team__members-svg--link" href="#">
+                    <svg class="team__members-svg">
+                      <use
+                        href="./images/icoons/symbol-defs.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!-- clients -->
+
+    <section class="clients">
+      <h2 class="clients__title">Постійні Клієнти</h2>
+      <ul class="clients__list">
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-3"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-4"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-5"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients__item">
+          <a class="clients__item__link" href="#">
+            <svg class="clients__icon">
+              <use href="./images/icoons/symbol-defs.svg#icon-logo-6"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <a class="footer__logo" href="#"
+          >Web<span class="footer__logo--color">Studio</span></a
+        >
+        <ul class="footer__contact-list">
+          <li class="footer__contact-item">
+            <a
+              class="footer__contact-link"
+              href="https://maps.app.goo.gl/rt9b87Akdebz7ouV6"
+              target="blank"
+              rel="noopener norefferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="footer__contact-item">
+            <a class="footer__contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="footer__contact-item">
+            <a class="footer__contact-link" href="tel:380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
